--- a/index.html
+++ b/index.html
@@ -7,9 +7,48 @@
     <style>
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
-      #map {
+      #div1 {
         height: 50%;
       }
+	  #div2 {
+        height: 50%;
+      }
+	  
+	  #map1 {
+        height: 100%;
+		width: 25%;
+      }
+	  #map2 {
+        height: 100%;
+		width: 25%;
+		margin-left: 25%
+      }
+	  #map3 {
+        height: 100%;
+		width: 25%;
+		margin-left: 50%
+      }
+	  #map4 {
+        height: 100%;
+		width: 25%;
+		margin-left: 75%
+      }
+	  #map5 {
+        height: 100%;
+		width: 25%;
+      }
+	  	  #map6 {
+        height: 100%;
+		width: 25%;
+		margin-left: 25%
+      }
+	  	  #map7 {
+        height: 100%;
+		width: 25%;
+		margin-left: 50%
+      }
+	  
+
       /* Optional: Makes the sample page fill the window. */
       html, body {
         height: 100%;
@@ -17,25 +56,107 @@
         padding: 0;
       }
     </style>
-  </head>
-  <body>
-    <div id="map"></div>
-    <script>
-
-      function initMap() {
-        var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 15,
-          center: {lat: -45.8788, lng: 170.5028}
-        });
-
-        var ctaLayer = new google.maps.KmlLayer({
-          url: 'http://TheTimeForUs.github.io/kmlFiles/宝.kml',
-          map: map
-        });
-      }
-    </script>
-    <script async defer
+	<script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIE9nQK6hhnB9r003vPbNqTRVMf8Jzh10&callback=initMap">
     </script>
+  </head>
+  <body>
+    <div id="div1">
+		<div id="map1"></div>
+		<div id="map2"></div>
+		<div id="map3"></div>
+		<div id="map4"></div>
+	</div>
+	
+	<div id="div2">
+		<div id="map5"></div>
+		<div id="map6"></div>
+		<div id="map7"></div>
+	</div>
+    
+    <script>
+	var map1,map2,map3,map4,map5,map6,map7;
+		
+		  function initMap() 
+		  {
+			var map1 = new google.maps.Map(document.getElementById('map1'), {
+			  zoom: 15,
+			  center: {lat: -45.8788, lng: 170.5028}
+			});
+
+			var ctaLayer = new google.maps.KmlLayer({
+			  url: 'http://TheTimeForUs.github.io/kmlFiles/bao.kml',
+			  map: map1
+			});
+			
+			
+			
+			var map2 = new google.maps.Map(document.getElementById('map2'), {
+			  zoom: 15,
+			  center: {lat: -45.8788, lng: 170.5028}
+			});
+
+			var ctaLayer = new google.maps.KmlLayer({
+			  url: 'http://TheTimeForUs.github.io/kmlFiles/bei.kml',
+			  map: map2
+			});
+			
+			
+			var map3 = new google.maps.Map(document.getElementById('map3'), {
+			  zoom: 15,
+			  center: {lat: -45.8788, lng: 170.5028}
+			});
+
+			var ctaLayer = new google.maps.KmlLayer({
+			  url: 'http://TheTimeForUs.github.io/kmlFiles/qing.kml',
+			  map: map3
+			});
+			
+			
+			var map4 = new google.maps.Map(document.getElementById('map4'), {
+			  zoom: 15,
+			  center: {lat: -45.8788, lng: 170.5028}
+			});
+
+			var ctaLayer = new google.maps.KmlLayer({
+			  url: 'http://TheTimeForUs.github.io/kmlFiles/ren.kml',
+			  map: map4
+			});
+			
+			
+			
+			var map5 = new google.maps.Map(document.getElementById('map5'), {
+			  zoom: 15,
+			  center: {lat: -45.8788, lng: 170.5028}
+			});
+
+			var ctaLayer = new google.maps.KmlLayer({
+			  url: 'http://TheTimeForUs.github.io/kmlFiles/jie.kml',
+			  map: map5
+			});
+			
+			
+			var map6 = new google.maps.Map(document.getElementById('map6'), {
+			  zoom: 15,
+			  center: {lat: -45.8788, lng: 170.5028}
+			});
+
+			var ctaLayer = new google.maps.KmlLayer({
+			  url: 'http://TheTimeForUs.github.io/kmlFiles/kuai.kml',
+			  map: map6
+			});
+			
+			
+			var map7 = new google.maps.Map(document.getElementById('map7'), {
+			  zoom: 15,
+			  center: {lat: -45.8788, lng: 170.5028}
+			});
+
+			var ctaLayer = new google.maps.KmlLayer({
+			  url: 'http://TheTimeForUs.github.io/kmlFiles/le.kml',
+			  map: map7
+			});
+		  }
+		</script>
   </body>
 </html>
