--- a/index.html
+++ b/index.html
@@ -3,75 +3,54 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <title>LOVEU</title>
     <style>
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
-      #div1 {
-        height: 50%;
-      }
-	  #div2 {
-        height: 50%;
-      }
-	  
-	  #map1 {
-        height: 100%;
-		width: 25%;
-      }
-	  #map2 {
-        height: 100%;
-		width: 25%;
-		margin-left: 25%
-      }
-	  #map3 {
-        height: 100%;
-		width: 25%;
-		margin-left: 50%
-      }
-	  #map4 {
-        height: 100%;
-		width: 25%;
-		margin-left: 75%
-      }
-	  #map5 {
-        height: 100%;
-		width: 25%;
-      }
-	  	  #map6 {
-        height: 100%;
-		width: 25%;
-		margin-left: 25%
-      }
-	  	  #map7 {
-        height: 100%;
-		width: 25%;
-		margin-left: 50%
-      }
-	  
-
+  
       /* Optional: Makes the sample page fill the window. */
       html, body {
         height: 100%;
         margin: 0;
         padding: 0;
       }
+	  
+	  .col {
+		height: 500px;
+	  }
     </style>
 	<script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIE9nQK6hhnB9r003vPbNqTRVMf8Jzh10&callback=initMap">
     </script>
   </head>
   <body>
-    <div id="div1">
-		<div id="map1"></div>
-		<div id="map2"></div>
-		<div id="map3"></div>
-		<div id="map4"></div>
-	</div>
+	<!-- <div class="row"> -->
+	  <!-- <div class="col-sm", id="map1">col</div> -->
+	  <!-- <div class="col", id="map2">col</div> -->
+	  <!-- <div class="col", id="map3">col</div> -->
+	  <!-- <div class="col", id="map4">col</div> -->
+	<!-- </div> -->
 	
-	<div id="div2">
-		<div id="map5"></div>
-		<div id="map6"></div>
-		<div id="map7"></div>
+	<!-- <div id="div2"> -->
+		<!-- <div id="map5"></div> -->
+		<!-- <div id="map6"></div> -->
+		<!-- <div id="map7"></div> -->
+	<!-- </div> -->
+	<div class="row">
+	  <div class="col", id="map1"></div>
+	  <div class="col", id="map2"></div>
+	  <div class="col", id="map3"></div>
+	  <div class="col", id="map4"></div>
+	</div>
+	<div class="row">
+	  <div class="col", id="map5"></div>
+	  <div class="col", id="map6"></div>
+	  <div class="col", id="map7"></div>
+	  <div class="col"></div>
 	</div>
     
     <script>
